--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.4",
+    "@supabase/supabase-js": "^2.89.0",
     "@types/three": "^0.182.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
@@ -27,6 +28,7 @@
     "next": "^16.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0",
     "zustand": "^5.0.9"
