--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@metaplex-foundation/mpl-core": "^1.7.0",
+    "@metaplex-foundation/umi": "^1.4.1",
+    "@metaplex-foundation/umi-bundle-defaults": "^1.4.1",
+    "@metaplex-foundation/umi-signer-wallet-adapters": "^1.4.1",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "@solana/wallet-adapter-base": "^0.9.27",
@@ -22,8 +26,10 @@
     "@solana/web3.js": "^1.98.4",
     "@supabase/supabase-js": "^2.89.0",
     "@types/three": "^0.182.0",
+    "bs58": "^6.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
+    "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
     "next": "^16.1.1",
     "react": "^19.2.3",
@@ -31,6 +37,7 @@
     "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0",
+    "tweetnacl": "^1.0.3",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
